add intel.js api
